[package]
name = "mini_os"
version = "0.1.0"
authors = ["yjhmelody <465402634@qq.com>"]

[features]
integration-test = []

[dependencies]
volatile = "0.2"
spin = "0.4"
uart_16550 = "0.1.0"
x86_64 = "0.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "*"

# This sets the panic strategy to abort for both the dev profile (used for cargo build)
# and the release profile (used for cargo build --release).
# Now the eh_personality language item should no longer be required.

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[package.metadata.bootimage]
default-target = "x86_64-mini_os.json"